--- a/src/angular/road-story-tracking/src/app/app.component.html
+++ b/src/angular/road-story-tracking/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="header">
+    <app-navigation-bar></app-navigation-bar>
+</div>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
+<div class="footer">
+
+</div>
