--- a/src/angular/road-story-tracking/src/styles.css
+++ b/src/angular/road-story-tracking/src/styles.css
@@ -1,2 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body{
+    margin: 0;
+}
+
+.content{
+    margin: 8px;
+    padding-top: 56px;
+}
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
