--- a/src/angular/road-story-tracking/src/app/shared/components/navigation-bar.component.html
+++ b/src/angular/road-story-tracking/src/app/shared/components/navigation-bar.component.html
@@ -1,7 +1,16 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <span>Custom Toolbar</span>
+        <button mat-icon-button routerLink="/home" routerLinkActive="active">
+            <mat-icon>home</mat-icon>
+        </button>
         <span class="fill-remaining-space"></span>
-        <span>{{ userName }}</span>
+        <div *ngIf="isAuthenticated">
+            <button mat-button routerLink="/account/manage" routerLinkActive="active">{{ userName }}</button>
+            <button mat-button (click)="logOff()"><i class="material-icons">exit_to_app</i> Log off</button>
+        </div>
+        <div *ngIf="!isAuthenticated">
+            <button mat-button routerLink="/account/login" routerLinkActive="active"><i class="material-icons">forward</i> Login</button>
+            <button mat-button routerLink="/account/register" routerLinkActive="active"><i class="material-icons">person</i> Register</button>
+        </div>
     </mat-toolbar-row>
 </mat-toolbar>
