Google maps included

--- a/src/angular/road-story-tracking/src/app/account/components/login-account.component.html
+++ b/src/angular/road-story-tracking/src/app/account/components/login-account.component.html
@@ -1,4 +1,6 @@
-<h1>Login</h1>
-<input type="text" name="login" [(ngModel)]="loginInput">
-<input type="password" name="password" [(ngModel)]="passwordInput">
-<button (click)="login()">Login</button>
+<div class="wrapper">
+    <h1>Login</h1>
+    <input type="text" name="login" [(ngModel)]="loginInput">
+    <input type="password" name="password" [(ngModel)]="passwordInput">
+    <button (click)="login()">Login</button>
+</div>
