--- a/src/angular/road-story-tracking/src/styles.css
+++ b/src/angular/road-story-tracking/src/styles.css
@@ -1,16 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body{
+html, body{
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .content{
-    margin: 8px;
-    padding-top: 56px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.content .wrapper{
+    padding: 72px 8px 8px 8px;
 }
 
 .header{
+    z-index: 1;
     position: fixed;
     top: 0;
     left: 0;
@@ -25,3 +33,4 @@ body{
 :focus {
     outline: none;
 }
+  
