--- a/src/angular/road-story-tracking/src/app/account/components/register-account.component.html
+++ b/src/angular/road-story-tracking/src/app/account/components/register-account.component.html
@@ -1,3 +1,46 @@
 <div class="wrapper">
-    <h1>Register</h1>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>
+                <h1>Register</h1>
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <form class="register-form" #registerForm="ngForm" (submit)="register()">
+                <div class="register-inputs">
+                    <mat-form-field class="register-full-width">
+                        <input matInput type="text" name="login" placeholder="Email" [(ngModel)]="registerUserModel.email" #emailInput="ngModel" required
+                            email>
+                        <mat-error *ngIf="emailInput.invalid">
+                            <span *ngIf="emailInput.hasError('required')">* The email address is required</span>
+                            <span *ngIf="!emailInput.hasError('required') && emailInput.hasError('email')">* The email address is invalid</span>
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="register-full-width">
+                        <input matInput type="password" name="password" placeholder="Password" [(ngModel)]="registerUserModel.password" #passwordInput="ngModel"
+                            required>
+                        <mat-error *ngIf="passwordInput.invalid">
+                            <span *ngIf="passwordInput.hasError('required')">* The password is required</span>
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="register-full-width">
+                        <input matInput type="password" name="confirm-password" placeholder="Confirm password" [(ngModel)]="registerUserModel.confirmPassword"
+                            #confirmPasswordInput="ngModel" required>
+                        <mat-error *ngIf="confirmPasswordInput.invalid">
+                            <span *ngIf="confirmPasswordInput.hasError('required')">* The confirm password is required</span>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="register-button">
+                    <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.form.valid || pendingRequest">Register</button>
+                </div>
+                <div class="clearfix"></div>
+                <div class="backend-errors">
+                    <mat-error *ngFor="let error of errors">
+                        * {{ error }}
+                    </mat-error>
+                </div>
+            </form>
+        </mat-card-content>
+    </mat-card>
 </div>
