--- a/src/angular/road-story-tracking/src/app/shared/components/auth-required.component.html
+++ b/src/angular/road-story-tracking/src/app/shared/components/auth-required.component.html
@@ -1,3 +1,18 @@
 <div class="wrapper">
-    <h1>Authentication required</h1>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>
+                <h1>Authentication is required</h1>
+            </mat-card-title>
+            <mat-card-subtitle>
+                <h2>What would you like to do?</h2>
+            </mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="buttons-layout">
+                <button mat-raised-button class="button-margin" routerLink="/account/login" routerLinkActive="active">Login</button>
+                <button mat-raised-button routerLink="/account/register" routerLinkActive="active">Register</button>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
