--- a/src/angular/road-story-tracking/src/app/account/components/manage-account/manage-account.component.html
+++ b/src/angular/road-story-tracking/src/app/account/components/manage-account/manage-account.component.html
@@ -1,3 +1,44 @@
 <div class="wrapper">
-    <h1>Manage account</h1>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>
+                <h1>Manage account</h1>
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="manage-content">
+                <div class="manage-image">
+                    Here image
+                </div>
+                <div class="manage-data">
+                    <form class="manage-form" #manageForm="ngForm">
+                        <div class="manage-inputs">
+                            <mat-form-field class="manage-full-width">
+                                <input matInput type="text" name="login" placeholder="Email" [(ngModel)]="applicationUser.email" [disabled]="true">
+                            </mat-form-field>
+                        </div>
+                        <div class="manage-inputs">
+                            <mat-form-field class="manage-full-width">
+                                <input matInput type="text" name="first-name" placeholder="First name" [(ngModel)]="applicationUser.firstName">
+                            </mat-form-field>
+                        </div>
+                        <div class="manage-inputs">
+                            <mat-form-field class="manage-full-width">
+                                <input matInput type="text" name="last-name" placeholder="Last name" [(ngModel)]="applicationUser.lastName">
+                            </mat-form-field>
+                        </div>
+                        <div class="manage-inputs">
+                            <mat-form-field class="manage-full-width">
+                                <input matInput type="text" name="phone" placeholder="Phone number" [(ngModel)]="applicationUser.phoneNumber">
+                            </mat-form-field>
+                        </div>
+                        <div class="manage-button">
+                            <button mat-raised-button color="primary" type="submit" [disabled]="!manageForm.form.valid || pendingRequest">Update</button>
+                        </div>
+                        <div class="clearfix"></div>
+                    </form>
+                </div>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
