--- a/src/angular/road-story-tracking/src/styles.css
+++ b/src/angular/road-story-tracking/src/styles.css
@@ -5,12 +5,14 @@ html, body{
     margin: 0;
     width: 100%;
     height: 100%;
+    min-width: 320px;
 }
 
 .content{
     position: absolute;
     width: 100%;
     height: 100%;
+    min-width: 320px;
 }
 
 .content .wrapper{
