--- a/src/angular/road-story-tracking/src/app/home/components/home/home.component.css
+++ b/src/angular/road-story-tracking/src/app/home/components/home/home.component.css
@@ -1,4 +1,5 @@
 agm-map {
+    top: 64px;
     height: 100%;
 }
 
@@ -13,9 +14,9 @@ app-filter{
     position: absolute;
     width: 70%;
     top: calc(64px + 5%);
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
+    left: 0;
+    right: 0;
+    margin-left: auto;
     margin-right: auto;
     z-index: 2;
     background-color: rgba(255, 255, 255, 0.9);
@@ -23,7 +24,12 @@ app-filter{
     border-radius: 5px;
 }
 
-@media only screen and (max-width: 425px) {
+.styled-description{
+    white-space: pre;
+    text-align: justify;
+}
+
+@media only screen and (max-width: 600px) {
 
     app-navigation-menu{
         position: absolute;
