--- a/src/angular/road-story-tracking/src/styles.css
+++ b/src/angular/road-story-tracking/src/styles.css
@@ -8,15 +8,15 @@ html, body{
     min-width: 320px;
 }
 
-.content{
+.content {
     position: absolute;
     width: 100%;
     height: 100%;
     min-width: 320px;
 }
 
-.content .wrapper{
-    padding: calc(72px + 3%) 3% 3% 3%;
+.content .wrapper {
+    padding: calc(64px + 2%) 2% 2% 2%;
 }
 
 .header{
@@ -35,4 +35,18 @@ html, body{
 :focus {
     outline: none;
 }
-  
+
+::-webkit-scrollbar {
+    width: 0.5em;
+    height: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #000000;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+}
