Add event with images

--- a/src/angular/road-story-tracking/src/app/home/components/home/home.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/home/home.component.html
@@ -8,4 +8,9 @@
             <a href="#" onclick="return false;">Details</a>
         </agm-info-window>
     </agm-marker>
+    <agm-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="'assets/icons/my-position-marker.png'">
+        <agm-info-window>
+            <h3>My position</h3>
+        </agm-info-window>
+    </agm-marker>
 </agm-map>
