Image servie and images loaded on debug and release

--- a/src/angular/road-story-tracking/src/app/home/components/navigation-menu/navigation-menu.component.css
+++ b/src/angular/road-story-tracking/src/app/home/components/navigation-menu/navigation-menu.component.css
@@ -10,6 +10,10 @@
     text-align: left;
 }
 
+.full-width-refresh{
+    width: 100% !important;
+}
+
 @media only screen and (max-width: 600px) {
 
     .navigation-buttons > button:hover {
