--- a/src/angular/road-story-tracking/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/angular/road-story-tracking/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -3,14 +3,25 @@
         <button mat-icon-button routerLink="/home" routerLinkActive="active">
             <mat-icon>home</mat-icon>
         </button>
+        <button *ngIf="isAuthenticated" mat-button routerLink="/my-markers" routerLinkActive="active">
+            <i class="material-icons">book</i> My events
+        </button>
         <span class="fill-remaining-space"></span>
         <div *ngIf="isAuthenticated">
-            <button mat-button routerLink="/account/manage" routerLinkActive="active"><i class="material-icons">account_circle</i> My account</button>
-            <button mat-button (click)="logOff()"><i class="material-icons">exit_to_app</i> Log off</button>
+            <button mat-button routerLink="/account/manage" routerLinkActive="active">
+                <i class="material-icons">account_circle</i> My account
+            </button>
+            <button mat-button (click)="logOff()">
+                <i class="material-icons">exit_to_app</i> Log off
+            </button>
         </div>
         <div *ngIf="!isAuthenticated">
-            <button mat-button routerLink="/account/login" routerLinkActive="active"><i class="material-icons">forward</i> Login</button>
-            <button mat-button routerLink="/account/register" routerLinkActive="active"><i class="material-icons">person</i> Register</button>
+            <button mat-button routerLink="/account/login" routerLinkActive="active">
+                <i class="material-icons">forward</i> Login
+            </button>
+            <button mat-button routerLink="/account/register" routerLinkActive="active">
+                <i class="material-icons">person</i> Register
+            </button>
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
