Markers CRUD operations

--- a/src/angular/road-story-tracking/src/app/home/components/marker/marker.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/marker/marker.component.html
@@ -2,7 +2,11 @@
     <mat-card>
         <mat-card-header>
             <mat-card-title>
-                <h1>{{ marker.name }}</h1>
+                <img [src]="marker.markerOwner.image" onError="this.onerror = null; this.src = this.src='assets/images/account-image.svg';"
+                    width="64px" height="64px" style="margin-right: 16px">
+                <h1 class="pull-right">{{ marker.markerOwner.firstName }} {{ marker.markerOwner.lastName }}</h1>
+                <h1 class="pull-right" *ngIf="marker.markerOwner.firstName === '' && marker.markerOwner.lastName === ''">{{ marker.markerOwner.userName }}</h1>
+                <h2>{{ marker.name }}</h2>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
