--- a/src/angular/road-story-tracking/src/app/home/components/marker/marker.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/marker/marker.component.html
@@ -4,14 +4,21 @@
             <mat-card-title>
                 <img [src]="marker.markerOwner.image" onError="this.onerror = null; this.src = this.src='assets/images/account-image.svg';"
                     width="64px" height="64px" style="margin-right: 16px">
-                <h1 class="pull-right">{{ marker.markerOwner.firstName }} {{ marker.markerOwner.lastName }}</h1>
-                <h1 class="pull-right" *ngIf="marker.markerOwner.firstName === '' && marker.markerOwner.lastName === ''">{{ marker.markerOwner.userName }}</h1>
-                <h2>{{ marker.name }}</h2>
+                <h1 class="pull-right">
+                    {{ marker.markerOwner.firstName }} {{ marker.markerOwner.lastName }} | {{ marker.createDate | date:'d.M.yy, h:mm a'}}
+                </h1>
+                <h1 class="pull-right" *ngIf="marker.markerOwner.firstName === '' && marker.markerOwner.lastName === ''">
+                    {{ marker.markerOwner.userName }} | {{ marker.createDate | date:'d.M.yy, h:mm a'}}
+                </h1>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <ngx-gallery *ngIf="galleryImages.length > 0" [options]="galleryOptions" [images]="galleryImages" #gallery></ngx-gallery>
+            <h2>{{ marker.name }}</h2>
             <p class="styled-description">{{ marker.description }}</p>
         </mat-card-content>
     </mat-card>
+    <div class="comments">
+        <app-comments></app-comments>
+    </div>
 </div>
