--- a/src/angular/road-story-tracking/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/angular/road-story-tracking/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -3,11 +3,11 @@
         <button mat-icon-button routerLink="/home" routerLinkActive="active">
             <mat-icon>home</mat-icon>
         </button>
-        <button *ngIf="isAuthenticated && !isMobile" mat-button routerLink="/my-markers" routerLinkActive="active">
+        <button *ngIf="isAuthenticated" class="desktop" mat-button routerLink="/my-markers" routerLinkActive="active">
             <i class="material-icons">book</i> My events
         </button>
         <span class="fill-remaining-space"></span>
-        <div *ngIf="isAuthenticated && !isMobile">
+        <div *ngIf="isAuthenticated" class="desktop">
             <button mat-button routerLink="/account/manage" routerLinkActive="active">
                 <i class="material-icons">account_circle</i> My account
             </button>
@@ -15,7 +15,7 @@
                 <i class="material-icons">exit_to_app</i> Log off
             </button>
         </div>
-        <div *ngIf="!isAuthenticated && !isMobile">
+        <div *ngIf="!isAuthenticated" class="desktop">
             <button mat-button routerLink="/account/login" routerLinkActive="active">
                 <i class="material-icons">forward</i> Login
             </button>
@@ -23,7 +23,7 @@
                 <i class="material-icons">person</i> Register
             </button>
         </div>
-        <div *ngIf="isMobile">
+        <div class="mobile">
             <mat-menu #appMenu="matMenu">
                 <button *ngIf="isAuthenticated" mat-button routerLink="/my-markers" routerLinkActive="active">
                     <i class="material-icons">book</i> My events
