--- a/src/angular/road-story-tracking/src/app/shared/components/navigation-bar/navigation-bar.component.css
+++ b/src/angular/road-story-tracking/src/app/shared/components/navigation-bar/navigation-bar.component.css
@@ -1,3 +1,22 @@
 .fill-remaining-space {
     flex: 1 1 auto;
 }
+
+.desktop {
+    display: block;
+}
+
+.mobile {
+    display: none;
+}
+
+@media (max-width: 600px) {
+
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
+}
