--- a/src/angular/road-story-tracking/src/app/home/components/marker/marker.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/marker/marker.component.html
@@ -1,19 +1,20 @@
-<div class="wrapper">
+<div class="wrapper" *ngIf="marker && marker.markerOwner">
     <mat-card>
         <mat-card-header>
             <mat-card-title>
                 <img [src]="marker.markerOwner.image || 'assets/images/account-image.svg'"
                     width="64px" height="64px" style="margin-right: 16px">
-                <h1 class="pull-right" *ngIf="marker.markerOwner.firstName !== '' || marker.markerOwner.lastName !== ''">
+                <h1 class="pull-right dont-break-out" *ngIf="marker.markerOwner.firstName !== '' || marker.markerOwner.lastName !== ''">
                     {{ marker.markerOwner.firstName }} {{ marker.markerOwner.lastName }} | {{ marker.createDate | date:'d.M.yy, h:mm a' }}
                 </h1>
-                <h1 class="pull-right" *ngIf="marker.markerOwner.firstName === '' && marker.markerOwner.lastName === ''">
+                <h1 class="pull-right dont-break-out" *ngIf="marker.markerOwner.firstName === '' && marker.markerOwner.lastName === ''">
                     {{ marker.markerOwner.userName }} | {{ marker.createDate | date:'d.M.yy, h:mm a' }}
                 </h1>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <ngx-gallery *ngIf="galleryImages.length > 0" [options]="galleryOptions" [images]="galleryImages" #gallery></ngx-gallery>
+            <ngx-gallery *ngIf="galleryImages && galleryImages.length > 0" [images]="galleryImages"
+                [options]="[{ thumbnails: false, height: '400px', width: '100%' }]"></ngx-gallery>
             <h2>{{ marker.name }}</h2>
             <p class="styled-description">{{ marker.description }}</p>
         </mat-card-content>
