My friends list and invitations ready without backend

--- a/src/angular/road-story-tracking/src/app/account/components/manage-account/manage-account.component.css
+++ b/src/angular/road-story-tracking/src/app/account/components/manage-account/manage-account.component.css
@@ -27,6 +27,11 @@
     padding: 2%;
 }
 
+.the-image{
+    width: 100%;
+    height: 100%;
+}
+
 .manage-data{
     width: calc(100% * 2/3);
     padding: 2%;
