--- a/src/angular/road-story-tracking/src/app/account/components/manage-account/manage-account.component.html
+++ b/src/angular/road-story-tracking/src/app/account/components/manage-account/manage-account.component.html
@@ -8,7 +8,7 @@
         <mat-card-content>
             <div class="manage-content" *ngIf="applicationUser">
                 <div class="manage-image">
-                    <img [src]="applicationUser.imageUrl || 'assets/images/account-image.svg'">
+                    <img [src]="applicationUser.imageUrl || 'assets/images/account-image.svg'" class="the-image">
                 </div>
                 <div class="manage-data">
                     <form class="manage-form" #manageForm="ngForm" (submit)="updateUserInfo()">
