--- a/src/angular/road-story-tracking/src/app/friends/components/friends/friends.component.html
+++ b/src/angular/road-story-tracking/src/app/friends/components/friends/friends.component.html
@@ -2,46 +2,18 @@
     <mat-card class="under-navigation-bar">
         <mat-card-header>
             <mat-card-title>
-                <h1>Friends</h1>
+                <h1>Friends and invitations</h1>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <mat-tab-group mat-stretch-tabs>
                 <mat-tab label="My friends">
-                    <mat-list class="scrollable-list" flex>
-                        <mat-list-item> Pepper </mat-list-item>
-                        <mat-list-item> Salt </mat-list-item>
-                        <mat-list-item> Paprika </mat-list-item>
-                        <mat-list-item> Pepper </mat-list-item>
-                        <mat-list-item> Salt </mat-list-item>
-                        <mat-list-item> Paprika </mat-list-item>
-                        <mat-list-item> Pepper </mat-list-item>
-                        <mat-list-item> Salt </mat-list-item>
-                        <mat-list-item> Paprika </mat-list-item>
-                        <mat-list-item> Pepper </mat-list-item>
-                        <mat-list-item> Salt </mat-list-item>
-                        <mat-list-item> Paprika </mat-list-item>
-                    </mat-list>
-
+                    <app-friends-list></app-friends-list>
                     <br>
-
-                    <mat-form-field class="search-input">
-                        <input type="text" matInput [matAutocomplete]="auto" placeholder="Search for friends...">
-                    </mat-form-field>
-
-                    <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option>
-                            aaa
-                        </mat-option>
-                        <mat-option>
-                            bbb
-                        </mat-option>
-                    </mat-autocomplete>
+                    <app-friends-search></app-friends-search>
                 </mat-tab>
                 <mat-tab label="Invitations">
-                    <div>
-                        Incoming invitations
-                    </div>
+                    <app-incoming-invitations></app-incoming-invitations>
                 </mat-tab>
             </mat-tab-group>
         </mat-card-content>
