--- a/src/angular/road-story-tracking/src/app/home/components/home/home.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-filter></app-filter>
 <app-navigation-menu (refreshMapClick)="refreshMap()"></app-navigation-menu>
-<agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" (mapClick)="mapClicked($event)">
+<agm-map [latitude]="mapLatitude" [longitude]="mapLongitude" [zoom]="zoom" (mapClick)="mapClicked($event)">
     <agm-marker *ngFor="let marker of markers" [latitude]="marker.latitude" [longitude]="marker.longitude" [iconUrl]="translateTypeToIcon(marker.type)">
         <agm-info-window *ngIf="marker.name">
             <h3>{{ marker.name }}</h3>
