--- a/src/angular/road-story-tracking/src/styles.css
+++ b/src/angular/road-story-tracking/src/styles.css
@@ -70,6 +70,8 @@ ngx-gallery-image {
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px #000000;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px #000000;
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 ::-webkit-scrollbar-thumb {
